👨🏻‍💻 Landing page was created

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -76,6 +76,10 @@
   --sidebar-accent-foreground: oklch(0.21 0.006 285.885);
   --sidebar-border: oklch(0.92 0.004 286.32);
   --sidebar-ring: oklch(0.705 0.015 286.067);
+  --color-button-secondary: #3182F6;
+  --color-button-secondary-hover: #5595f8;
+  --color-button-outline-border: #3D434C;
+  --color-button-hover-bg: #1A1D22;
 }
 
 .dark {
@@ -110,6 +114,8 @@
   --sidebar-accent-foreground: oklch(0.985 0 0);
   --sidebar-border: oklch(1 0 0 / 10%);
   --sidebar-ring: oklch(0.552 0.016 285.938);
+
+  --ui-dark-700: #070C14;
 }
 
 @layer base {
